--- a/css/igeffect.css
+++ b/css/igeffect.css
@@ -91,7 +91,7 @@
         width: 250px;
         border-radius: 20px;
         /* background: #181A1B; */
-        background-image: url("https://image.prntscr.com/image/KJVZ3JxDSIW-JR5RywNQhw.png");
+        background-image: url("../images/igeffect/1st-effect.png");
         background-repeat: no-repeat;
         box-shadow: 0 0px 20px #AF72FE, 0 20px 50px rgba(0,0,0,0.09)
     }
