--- a/css/igeffect.css
+++ b/css/igeffect.css
@@ -92,6 +92,7 @@
         border-radius: 20px;
         /* background: #181A1B; */
         background-image: url("../images/igeffect/1st-effect.png");
+        background-size: 255px;
         background-repeat: no-repeat;
         box-shadow: 0 0px 20px #AF72FE, 0 20px 50px rgba(0,0,0,0.09)
     }
