--- a/css/igeffect.css
+++ b/css/igeffect.css
@@ -49,6 +49,29 @@
     box-shadow: 0 0px 20px #AF72FE, 0 20px 50px rgba(0,0,0,0.09)
 }
 
+.ieCards .card:hover{
+    box-shadow: 0 0px 10px #ffffff, 0 20px 50px rgba(0,0,0,0.09)
+}
+
+.ieCards h1 {
+    color: #ffffff;
+    font-size: 20px;
+    width: 100px;
+    margin-top: 50px;
+    margin-bottom: 50px;
+    background-color: #AF72FE;
+    border-radius: 20px;
+}
+
+.ieCards h1:hover {
+    color: #000000;
+    font-size: 20px;
+    width: 100px;
+    margin-top: 50px;
+    background-color: #ffffff;
+    border-radius: 20px;
+}
+
 .ieCards .one .cardoneImg{
     width: 60px;
     position: absolute;
@@ -110,6 +133,16 @@
         box-shadow: 0 0px 10px #AF72FE, 0 20px 50px rgba(0,0,0,0.09)
     }
     
+    .ieCards h1 {
+        color: #000000;
+        font-size: 20px;
+        width: 100px;
+        margin-top: 50px;
+        margin-bottom: 50px;
+        background-color: #ffffff;
+        border-radius: 20px;
+    }
+
     .ieCards .one .cardoneImg{
         width: 50px;
         position: absolute;
