--- a/css/styles.css
+++ b/css/styles.css
@@ -58,10 +58,32 @@ html,body{
     height: 90vh;
 }
 
+.landing2{
+    display: flex;
+    background-color: #131516;
+    flex-direction: column;
+    overflow-x: hidden;
+    align-items: center;
+    justify-content: center;
+    padding: 0 10vw 0 10vw;
+    height: 100vh;
+}
+
+.landing3{
+    display: flex;
+    background-color: #131516;
+    flex-direction: row;
+    overflow-x: hidden;
+    align-items: center;
+    justify-content: center;
+    padding: 0 10vw 0 10vw;
+    height: 90vh;
+}
+
 hr.num1 {
     border: 2px solid #AF72FE;
     border-radius: 5px;
-    width: 280px;
+    width: 150px;
 }
 
 hr.num2 {
@@ -77,29 +99,24 @@ hr.num2 {
     margin: 0 !important;
 }
 
-.landingText h3{
-    font-size: 20px;
-    color: #797978;
-    line-height: 30px;
-}
-
 .landingText h2{
+    justify-content: center;
+    align-items: center;
     color: #ffffff;
     font-size: 20px;
+}
+
+.landingText h3{
+    justify-content: center;
+    align-items: center;
+    font-size: 20px;
+    color: #797978;
+    /* line-height: 30px; */
 }
 
 .landingText h2 span{
     color: #AF72FE;
     font-size: 24px;
-}
-
-.landingText .btn{
-    width: 120px;
-    margin-top: 30px;
-    padding: 14px 20px 14px 20px;
-    background-color: #AF72FE;
-    border-radius: 45px;
-    text-align: center
 }
 
 .landingImage img{
@@ -126,7 +143,7 @@ hr.num2 {
 }
 
 .nav h4{
-    font-size: 6vw;
+    font-size: 4vw;
     margin-top: 10px;
     margin-bottom: 14px;
     margin-right: 7px;
@@ -139,7 +156,7 @@ hr.num1 {
 hr.num2 {
     border: 2px solid #AF72FE;
     border-radius: 5px;
-    width: 280px;
+    width: 80px;
 }
 
 /* LANDING 600px */
