--- a/css/igeffect.css
+++ b/css/igeffect.css
@@ -2,7 +2,7 @@
 
 .igeffectSection{
     background-color: #131516;
-    height: 800px;
+    height: 600px;
     overflow-x: hidden;
 }
 
@@ -49,6 +49,17 @@
     box-shadow: 0 0px 20px #AF72FE, 0 20px 50px rgba(0,0,0,0.09)
 }
 
+.ieCards .card2{
+    position: relative;
+    height: 450px;
+    width: 320px;
+    border-radius: 20px;
+    background: #181A1B;
+    background-size: 255px;
+    background-repeat: no-repeat;
+    box-shadow: 0 0px 10px #AF72FE, 0 20px 50px rgba(0,0,0,0.09)
+}
+
 .ieCards .card:hover{
     box-shadow: 0 0px 10px #ffffff, 0 20px 50px rgba(0,0,0,0.09)
 }
@@ -80,6 +91,15 @@
     right: 240px;
 }
 
+.ieCards .two .cardtwoImg{
+    width: 60px;
+    position: absolute;
+    border-radius: 20px;
+    background-color: white;
+    top: 340px;
+    right: 240px;
+}
+
 .ieCards .cardContent h2 {
     margin-bottom: 355px;
     margin-left: 240px;
@@ -103,6 +123,31 @@
     color: white;
 }
 
+.ieCards .cardContent2 h2 {
+    font-size: 22px;
+    margin-bottom: 355px;
+    margin-left: 240px;
+    margin-right: 15px;
+    margin-top: 12px;
+    color: #ffffff;
+    background-color: #131516;
+    justify-content: center;
+    width: 58px;
+    border-radius: 10px;
+    left: 10px;
+    box-shadow: 0 0px 3px #AF72FE, 0 10px 10px rgba(0,0,0,0.09)
+}
+
+.ieCards .cardContent2 span {
+    color: #AF72FE;
+    margin-left: 10px;
+}
+
+.ieCards .cardContent2 h3 {
+    margin-left: 20px;
+    color: white;
+}
+
 /* RESPONSIVE */
 @media only screen and (max-width: 600px){
 
@@ -121,6 +166,15 @@
         margin-bottom: 0px;
     }
 
+    .ieCards{
+        display: flex;
+        flex-direction: column;
+        justify-content: space-around;
+        align-items: center;
+        margin: 0 auto;
+        padding: 40px 0 120px 0;
+    }
+
     .ieCards .card{
         position: relative;
         height: 350px;
@@ -133,6 +187,18 @@
         box-shadow: 0 0px 10px #AF72FE, 0 20px 50px rgba(0,0,0,0.09)
     }
     
+    .ieCards .card2{
+        position: relative;
+        height: 350px;
+        width: 250px;
+        margin-top: 90px;
+        border-radius: 20px;
+        background: #181A1B;
+        background-size: 255px;
+        background-repeat: no-repeat;
+        box-shadow: 0 0px 10px #AF72FE, 0 20px 50px rgba(0,0,0,0.09)
+    }
+
     .ieCards h1 {
         color: #000000;
         font-size: 20px;
@@ -144,6 +210,14 @@
     }
 
     .ieCards .one .cardoneImg{
+        width: 50px;
+        position: absolute;
+        border-radius: 10px;
+        top: 250px;
+        right: 180px;
+    }
+
+    .ieCards .two .cardtwoImg{
         width: 50px;
         position: absolute;
         border-radius: 10px;
@@ -164,20 +238,6 @@
         border-radius: 10px;
         left: 10px;
     }
-    
-    /* .ieCards .cardContent h2 {
-        margin-bottom: 355px;
-        margin-left: 240px;
-        margin-right: 15px;
-        margin-top: 12px;
-        color: #ffffff;
-        background-color: #131516;
-        justify-content: center;
-        width: 50px;
-        border-radius: 10px;
-        left: 10px;
-        box-shadow: 0 0px 3px #AF72FE, 0 10px 10px rgba(0,0,0,0.09)
-    } */
 
     .ieCards .cardContent span {
         color: #AF72FE;
@@ -185,6 +245,32 @@
     }
     
     .ieCards .cardContent h3 {
+        color: white;
+    }
+
+    .ieCards .cardContent2 h2 {
+        font-size: 22px;
+        margin-bottom: 355px;
+        margin-left: 180px;
+        margin-right: 15px;
+        margin-top: 12px;
+        color: #ffffff;
+        background-color: #131516;
+        justify-content: center;
+        width: 58px;
+        border-radius: 10px;
+        left: 10px;
+        box-shadow: 0 0px 3px #AF72FE, 0 10px 10px rgba(0,0,0,0.09)
+    }
+    
+    .ieCards .cardContent2 span {
+        color: #AF72FE;
+        margin-left: 10px;
+    }
+    
+    .ieCards .cardContent2 h3 {
+        margin-left: 20px;
+        margin-top: -100px;
         color: white;
     }
 }
