--- a/css/styles.css
+++ b/css/styles.css
@@ -127,6 +127,29 @@ hr.num2 {
     width: 40vw;
 }
 
+/* CUSTOM SCROLLBAR */
+/* width */
+::-webkit-scrollbar {
+    width: 15px;
+  }
+  
+/* Track */
+::-webkit-scrollbar-track {
+    box-shadow: inset 0 0 5px grey; 
+    border-radius: 10px;
+}
+   
+/* Handle */
+::-webkit-scrollbar-thumb {
+    background: #AF72FE; 
+    border-radius: 10px;
+}
+  
+/* Handle on hover */
+::-webkit-scrollbar-thumb:hover {
+    background: #AF72FE;
+}
+
 /* RESPONSIVE */
 @media only screen and (max-width: 600px){
 
