--- a/css/img-gallery.css
+++ b/css/img-gallery.css
@@ -78,7 +78,7 @@ ul.slides input {
     width: 100%;
     height: 100%;
     right: 0%;
-    top: 0;
+    top: 0%;
     opacity: 0;
     transition: all .7s ease-in-out;
 }   
