--- a/css/daftar-acara.css
+++ b/css/daftar-acara.css
@@ -64,6 +64,16 @@
     color: #fff;
     padding: 10px;
     font-family: Poppins;
+}
+
+.daSection button:hover {
+    border-radius: 10px;
+    font-size: 15px;
+    cursor: pointer;
+    background-color: #131516;
+    color: #fff;
+    padding: 10px;
+    font-family: Poppins;
     box-shadow: 0 0px 10px #AF72FE, 0 20px 50px rgba(0,0,0,0.09);
 }
 
