--- a/css/igeffect.css
+++ b/css/igeffect.css
@@ -42,10 +42,8 @@
     height: 340px;
     width: 320px;
     border-radius: 20px;
-    /* background: #ffffff; */
-    /* background-image: url("/images/igeffect/1st-effect.png"); */
     background-repeat: no-repeat;
-    box-shadow: 0 0px 20px #AF72FE, 0 20px 50px rgba(0,0,0,0.09)
+    box-shadow: 0 0px 10px #000000, 0 20px 50px rgba(0,0,0,0.09)
 }
 
 .ieCards .card2{
@@ -60,18 +58,22 @@
 }
 
 .ieCards .card:hover{
-    box-shadow: 0 0px 10px #ffffff, 0 20px 50px rgba(0,0,0,0.09)
+    box-shadow: 0 0px 20px #AF72FE, 0 20px 50px rgba(0,0,0,0.09)
 }
 
 .ieCards h1 {
     color: #ffffff;
-    font-size: 20px;
+    font-size: 18px;
     width: 100px;
     margin-top: 50px;
     margin-bottom: 50px;
     /* background-color: #AF72FE; */
-    background-image: linear-gradient(to right,rgb(89,84,202), #AF72FE);
+    box-shadow: 0 0px 10px #080808, 0 20px 50px rgb(8, 8, 8);
     border-radius: 20px;
+}
+
+.ieCards h1:hover {
+    box-shadow: 0 0px 10px #AF72FE, 0 20px 50px rgb(0, 0, 0)
 }
 
 .ieCards h1:hover {
